# rbtmq-study-example

./: README.md  config.py  consumer.py  publisher.py  pyproject.toml
