[tool.poetry]
name = "rqtmq-study-example"
version = "0.1.0"
description = ""
authors = ["Ivan Piankov <vanypyankov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
pika-stubs = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
